--- a/release-notes/release-notes-0.7.html
+++ b/release-notes/release-notes-0.7.html
@@ -1,11 +1,23 @@
 <h3>Changelog</h3>
 <p>MacPass 0.7 introduces a lot of changes and a vast amount of bug fixes. The main changes are:<p>
+<h4>Features</h4>
 <ul>
 <li>KDBX4 support (ChaCha Cipher, Argon2 Key Derivation)</li>
 <li>Database merge on file change</li>
+<li>Manual merge of databases</li>
 <li>Twofish Cipher for KDB and KDBX databases</li>
 <li>Entry history support</li>
 <li>Partial support for mutli-selection of entries and groups</li>
+<li>Support for custom icons</li>
+<li>Enhanced display in database settings</li>
+<li>Added settings to enabled and change history support on databases</li>
+<li>Added additinal enforce singel password change option</li>
+</ul>
+<h4>Bugfixes</h4>
+<ul>
+<li>fixed multiple issues resulting in lost data after edits (notes in particular)</li>
+<li>removed incompatibilites in KDBX output with other Keepass clients</li>
+<li></li>
 </ul>
 <p>For a complete list of changes see <a href="https://github.com/mstarke/MacPass/compare/0.6.2-alpha...0.7-alpha">0.6.2-alpha…0.7-alpha</a> and the corresponding submodule commits</p>
 <p><strong>This Release requires 10.10. Support for 10.8 and 10.9 has ben dropped.</strong></p>
