--- a/release-notes/release-notes-0.7.1.html
+++ b/release-notes/release-notes-0.7.1.html
@@ -1,5 +1,5 @@
 <h3>Changelog</h3>
-<p>This release is mostly aimed to fix loclization issues.<p>
+<p>This release is mostly aimed to fix localization issues.<p>
 <h4>Features</h4>
 <ul>
   <li>History column is now hideable as well</li>
