Added update notice for plugins to release notes

--- a/release-notes/release-notes-0.7.1.html
+++ b/release-notes/release-notes-0.7.1.html
@@ -1,5 +1,6 @@
 <h3>Changelog</h3>
 <p>This release is mostly aimed to fix localization issues.<p>
+<p><strong>Version 0.7.x breaks the old plugin API. Thus you need to update any plugins to work again!</strong></p>
 <h4>Features</h4>
 <ul>
   <li>History column is now hideable as well</li>
