--- a/release-notes/release-notes-0.7.html
+++ b/release-notes/release-notes-0.7.html
@@ -1,5 +1,6 @@
 <h3>Changelog</h3>
 <p>MacPass 0.7 introduces a lot of changes and a vast amount of bug fixes.<p>
+<p><strong>Version 0.7 breaks the old plugin API. Thus you need to update any plugins to work again!</strong></p>
 <h4>Features</h4>
 <ul>
   <li>KDBX4 support (ChaCha Cipher, Argon2 Key Derivation)</li>
