--- a/release-notes/release-notes-0.7.1.html
+++ b/release-notes/release-notes-0.7.1.html
@@ -5,7 +5,7 @@
 <ul>
   <li>History column is now hideable as well</li>
   <li>Plugins can now be added via the plugin preferences</li>
-  <li>Added button to open Plugins folder for browsing</li>
+  <li>Added button to open plugins folder for browsing</li>
 </ul>
 <h4>Bugfixes</h4>
 <ul>
