--- a/release-notes/release-notes-0.7.4.html
+++ b/release-notes/release-notes-0.7.4.html
@@ -1,5 +1,7 @@
 <h3>Changelog</h3>
-<p><strong>Version 0.7.x breaks the old plugin API. Thus you need to update any plugins to work again!</strong></p>
+<p><strong>Version 0.7.4 breaks the old plugin API. Thus you need to update any plugins to work again!</strong></p>
+<p>This Version introduces a plugin repository system. For detailed descriptions please refer to the <a href="https://github.com/MacPass/MacPass/wiki/Plugins">plugin system documentation</a>. 
+
 <h4>Enhancements</h4>
 <ul>
   <li>Added preferences to allow for universal clipboard support. Item menu actions now should work in more scenarios</li>
