--- a/release-notes/release-notes-0.7.12.html
+++ b/release-notes/release-notes-0.7.12.html
@@ -5,7 +5,7 @@ This update contains a critical bug fix preventing the use of key files when cha
 <h4>Changes</h4>
 <ul>
     <li>Updated polish localization</li>
-    <li>Update french localization</li>
+    <li>Updated french localization</li>
 </ul>
 <h4>Bugfixes</h4>
 <ul>
